@@ -34,6 +34,7 @@ interface:
 - added method SCIPgetNCliquesCreated() which returns the number of cliques created so far
 - unify handling of objective limit by only using one parameter and not distinguishing w.r.t. lower and upper limits
 - replaced LPI parameters SCIP_LPPAR_LOBJLIM and SCIP_LPPAR_UOBJLIM by SCIP_LPPAR_OBJLIM
+- added additional parameter for statistics tables to SCIPcopyPlugins
 
 performance improvements:
 - use disjoint set to reduce peak memory usage and time to compute of clique table connectedness information
